# sklearn-onnx

./: .buildinfo  .gitignore  .pypirc  .travis.yml  CHANGELOGS.md  MANIFEST.in  NOTICE  README.md  README.rst  api_summary.html  gammatest.py  genindex.html  index.html  index_tutorial.html  introduction.html  local_outlier_factor.onnx  objects.inv  parameterized.html  pipeline.html  pipeline_lightgbm.onnx  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  sk_OCSVM.onnx  sk_SGD_OneClass_SVM.onnx  sk_SGD_binary_classifier.onnx  supported.html  test_ovr_decision_function.py  test_sklearn_one_vs_one_classifier_converter.py  tests.html  tutorial.html  tutorial_1-5_external.html  tutorial_1_simple.html  tutorial_2-5_extlib.html  tutorial_2_new_converter.html  tutorial_3_new_operator.html  (+1 more)
.azure-pipelines/: linux-CI-nightly.yml  linux-conda-CI.yml  win32-CI-nightly.yml  win32-conda-CI-2.yml  win32-conda-CI.yml
.doctrees/: api_summary.doctree  index.doctree  index_tutorial.doctree  introduction.doctree  parameterized.doctree  pipeline.doctree  tutorial_1-5_external.doctree  tutorial_1_simple.doctree  tutorial_2-5_extlib.doctree  tutorial_2_new_converter.doctree  tutorial_3_new_operator.doctree  tutorial_4_advanced.doctree
_doctrees/: api_summary.doctree  environment.pickle  index.doctree  tests.doctree  tutorial.doctree
_modules/: abc.html  index.html  skl2onnx.html
_sources/: api_summary.rst.txt  index.rst.txt  index_tutorial.rst.txt  introduction.rst.txt  parameterized.rst.txt  pipeline.rst.txt  sg_execution_times.rst.txt  supported.rst.txt  tutorial.rst.txt  tutorial_1-5_external.rst.txt  tutorial_1_simple.rst.txt  tutorial_2_new_converter.rst.txt  tutorial_3_new_operator.rst.txt  tutorial_4_advanced.rst.txt
_static/: basic.css  documentation_options.js  plot_directive.css  pygments.css  readable.css  sphinx-modern-theme-modified.css
auto_examples/: index.html  plot_backend.html  plot_benchmark_cdist.html  plot_benchmark_pipeline.html  plot_black_op.html  plot_cast_transformer.html  plot_common_errors.html  plot_complex_pipeline.html  plot_convert_decision_function.html  plot_convert_model.html  plot_convert_syntax.html  plot_convert_zipmap.html  plot_custom_model.html  plot_custom_parser.html  plot_custom_parser_alternative.html  plot_errors_onnxruntime.html  plot_errors_pipeline.html  plot_gpr.html  plot_intermediate_outputs.html  plot_investigate_pipeline.html  plot_logging.html  plot_metadata.html  plot_nmf.html  plot_onnx_operators.html  plot_output_onnx_single_probability.html  plot_pipeline.html  plot_pipeline_lightgbm.html  plot_pipeline_xgboost.html  plot_tfidfvectorizer.html  plot_transfer_learning.html  sg_execution_times.html
auto_tutorial/: index.html  plot_abegin_convert_pipeline.html  plot_bbegin_measure_time.html  plot_catwoe_transformer.html  plot_cbegin_opset.html  plot_dbegin_options.html  plot_dbegin_options_list.html  plot_dbegin_options_zipmap.html  plot_ebegin_float_double.html  plot_fbegin_investigate.html  plot_gbegin_cst.html  (+24 more)
(+1831 files in other folders)
